Пофиксил сборку в CMake, но не полностью
Теперь хоть можно будет настроить Appveyour и билдить под Linux и Windows сразу.

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,12 @@
 *.exe
 *.out
 *.app
-TemaVKBot/.vs/TemaVKBot/v16/.suo
 *.db
 *.opendb
 *.ipch
 *.pdb
+
+# Folders
+TemaVKBot/.vs/
+TemaVKBot/build/
+TemaVKBot/out
